--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@ html {
     font-size: 10px;
 }
 
+body {
+    max-width: 1920px;
+}
+
 /* =================
     HEADER STYLE
 ====================*/
@@ -51,35 +55,55 @@ header article h2 {
     font-size: 4.5rem;
     width: 6em;
     margin: 200px auto;
-    
+
 }
 
 
 /* =================
     MAIN STYLE
 ====================*/
-main section {
-    margin: 2rem 5rem;
+main section section {
+    width: 80%;
     text-align: center;
+    margin: 2rem auto;
 }
 
-main section h3 {
+main section section h3 {
     font-family: Cinzel-Var;
     font-size: 2rem;
 }
 
-main section p {
+main section section p {
     font-size: 1.2rem;
     margin: 6rem 0;
 }
 
-main section div img {
-    width: 25%;
-    margin: 2.5rem;
+/* Project Alps Gallery - Bilderraster aus 6 Bildern */
+main section div {
+    max-width: 100%;
+    margin: 2.5rem auto;
+    text-align: center;
 }
 
+main section div img {
+    width: 25%;
+    padding: 2rem 0;
+}
+
+section div img:nth-of-type(2) {
+    margin: 0 5%;
+}
+
+/* TOUR DATES */
 main section article {
-    margin: 5rem 0;
+    width: 80%;
+    margin: 5rem 9rem;
+}
+
+main section article h3 {
+    text-align: center;
+    font-family: Cinzel-Var;
+    font-size: 2rem;
 }
 
 main article ul {
@@ -138,7 +162,7 @@ footer h3 {
 footer ul {
     list-style-type: none;
     text-align: center;
-    padding: 1rem; 
+    padding: 1rem;
 }
 
 footer ul li {
